# neurocache

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  docker-compose.yml  flake.nix  prometheus.yml
.github/workflows/: ci.yml
crates/neuroctl/: Cargo.toml
crates/neurod/: Cargo.toml
crates/neurod/src/: main.rs
crates/raft/src/: lib.rs
dashboards/: raft-consensus.json  raft-performance.json
grafana/provisioning/dashboards/: dashboards.yml
neuroctl/: Cargo.toml
neuroctl/src/: main.rs
neurod/: Cargo.toml
neurod/src/: command.rs  lib.rs  main.rs
neurotest/: Cargo.toml  README.md  cluster.toml
neurotest/src/: bench.rs  cluster.rs  config.rs  main.rs  monitor.rs
raft/: Cargo.toml
raft/src/: config.rs  lib.rs  log.rs  message.rs  metrics.rs  network.rs  node.rs  rpc_kv.rs
raft/src/net/: codec.rs  mod.rs  outbound.rs  pool.rs
test_cluster/: README.md  cluster.sh  load_test.sh  node_1.json  node_2.json  node_3.json  quickstart.sh  shutdown.sh
