[workspace]
members = [
    "raft",
    "neurod", 
    "neuroctl",
]
resolver = "3"

[workspace.dependencies]
clap = { version = "4", features = ["derive", "env"] }
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
proptest = "1"
