[workspace]
members = [
    "raft",
    "neurod", 
    "neuroctl",
]
resolver = "3"

[workspace.dependencies]
clap = { version = "4", features = ["derive", "env"] }
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-serde = { version = "0.9", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
proptest = "1"
futures = "0.3"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
axum = "0.7"
