[package]
name = "neuroctl"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
raft = { path = "../raft" }
neurod = { path = "../neurod" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
