[package]
name = "neurod"
version = "0.1.0"
edition = "2021"

[dependencies]
raft = { path = "../raft" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
